--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lz-string": "^1.4.4",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.0",
     "object-assign": "4.1.1",
