--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lz-string": "^1.4.4",
+    "material-design-icons": "^3.0.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.0",
     "object-assign": "4.1.1",
@@ -45,6 +46,7 @@
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
+    "react-toolbox": "^2.0.0-beta.12",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
@@ -59,7 +61,8 @@
     "start-js": "node scripts/start.js",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "toolbox": "react-toolbox-themr"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -101,5 +104,11 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "react-toolbox-themr": "^1.0.2"
+  },
+  "reactToolbox": {
+    "output": "./src/assets/react-toolbox"
   }
 }
