:zap: Add settings page base design

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
     "newtab": "tabpage.html"
   },
   "options_ui": {
-    "chrome_style": true,
+    "chrome_style": false,
     "page": "options.html"
   },
   "permissions": [
