--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,7 @@
     "alarms",
     "notifications",
     "storage",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "http://*.emad.in/*"
   ]
 }
