--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
     "react-toolbox": "^2.0.0-beta.12",
+    "roboto-fontface": "^0.8.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
