--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^15.6.1",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
+    "react-draggable": "^3.0.3",
     "react-error-overlay": "^1.0.10",
     "react-toolbox": "^2.0.0-beta.12",
     "style-loader": "0.18.2",
