--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lz-string": "^1.4.4",
-    "material-design-icons": "^3.0.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.0",
     "object-assign": "4.1.1",
@@ -48,6 +47,7 @@
     "react-dom": "^15.6.1",
     "react-draggable": "^3.0.3",
     "react-error-overlay": "^1.0.10",
+    "react-icons": "^2.2.5",
     "react-toolbox": "^2.0.0-beta.12",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
