--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,7 @@
   "description": "__MSG_extDesc__",
   "version": "0.1.0",
   "default_locale": "en",
+  "homepage_url": "https://mesmerized.me",
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
