--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "author": "Emad Alam <emad.alam@yahoo.com>",
   "name": "__MSG_extName__",
+  "short_name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "version": "0.1.0",
   "default_locale": "en",
