:bookmark: Version bump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesmerized",
-  "version": "0.2.0",
-  "description": "Browser Extension to give a fresh look to your new tab page, with beautiful backgrounds, inspirational quotes, weather forecasts, reminders, to-do lists and much more.",
+  "version": "0.2.1",
+  "description": "Browser Extension to give a fresh look to your new tab page, with beautiful backgrounds, inspirational quotes, weather forecasts, sticky notes, to-do lists and much more.",
   "private": true,
   "author": "Emad Alam <emad.alam@yahoo.com>",
   "homepage": "https://mesmerized.me",
