--- a/package.json
+++ b/package.json
@@ -19,51 +19,51 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.2",
-    "babel-runtime": "6.23.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.4",
-    "dotenv": "4.0.0",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "^6.23.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "chalk": "^1.1.3",
+    "css-loader": "^0.28.4",
+    "dotenv": "^4.0.0",
+    "eslint": "^4.4.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "fetch-jsonp": "^1.1.3",
-    "file-loader": "0.11.2",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "file-loader": "^0.11.2",
+    "fs-extra": "^3.0.1",
+    "html-webpack-plugin": "^2.29.0",
+    "jest": "^20.0.4",
     "lz-string": "^1.4.4",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.0",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
-    "promise": "8.0.1",
-    "react": "^15.6.1",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
+    "object-assign": "^4.1.1",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-loader": "^2.0.6",
+    "promise": "^8.0.1",
+    "react": "^16.3.1",
     "react-dev-utils": "^3.1.0",
-    "react-dom": "^15.6.1",
-    "react-draggable": "^3.0.3",
+    "react-dom": "^16.3.1",
+    "react-draggable": "^3.0.5",
     "react-error-overlay": "^1.0.10",
-    "react-icons": "^2.2.5",
+    "react-icons": "^2.2.7",
     "react-toolbox": "^2.0.0-beta.12",
-    "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "style-loader": "^0.18.2",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.1",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-manifest-plugin": "^1.2.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -119,7 +119,7 @@
     "download": "^6.2.5",
     "imageoptim": "^0.4.2",
     "react-toolbox-themr": "^1.0.2",
-    "request": "^2.81.0"
+    "request": "^2.85.0"
   },
   "reactToolbox": {
     "output": "./src/assets/react-toolbox"
