--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "fetch-jsonp": "^1.1.3",
     "file-loader": "^0.11.2",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "lz-string": "^1.4.4",
-    "node-sass-chokidar": "^0.0.3",
+    "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.2",
     "object-assign": "^4.1.1",
+    "persistme": "^1.1.1",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "promise": "^8.0.1",
@@ -117,7 +117,6 @@
   },
   "devDependencies": {
     "download": "^6.2.5",
-    "imageoptim": "^0.4.2",
     "react-toolbox-themr": "^1.0.2",
     "request": "^2.85.0"
   },
